# tree-sitter-pshtml

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  grammar.js  package-lock.json  package.json  readme.md  tree-sitter.json
bindings/c/: tree-sitter-pshtml.pc.in
bindings/c/tree_sitter/: tree-sitter-pshtml.h
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
queries/: brackets.scm  highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: context_dat.txt  dat_comment.txt  dat_with_option_containing_element_with_nested_dat.txt  database_field_access.txt  database_field_access_extension.txt  database_field_access_without_extension.txt  gpv.txt  if_dat.txt  if_else_labelled_embedded_elements_and_dats.txt  if_no_content.txt  if_template_ampersand.txt  if_unlabelled_no_operator.txt  invoker_dat.txt  nested_paren_dat.txt  parenthetical_closed.txt  parenthetical_left_open.txt  text_with_tilde_square_bracket.txt  tlist_sql_embedded_in_html.txt  tlist_sql_nonemessage_html.txt  tlist_sql_standard.txt  tlist_template_dats.txt
